--- a/src/components/sections/Footer.astro
+++ b/src/components/sections/Footer.astro
@@ -132,13 +132,13 @@
 
         {/* Links */}
         <div class="flex gap-6 text-sm text-gray-400">
-          <a href="#" class="hover:text-cyan-400 transition">
+          <a href="/privacy" class="hover:text-cyan-400 transition">
             Privacidad
           </a>
-          <a href="#" class="hover:text-cyan-400 transition">
+          <a href="/terms" class="hover:text-cyan-400 transition">
             Términos
           </a>
-          <a href="#" class="hover:text-cyan-400 transition">
+          <a href="/cookies" class="hover:text-cyan-400 transition">
             Cookies
           </a>
         </div>
